tests/expectations/parser-statement/statement/return_fail.out
Error [EPAR0370003]: unexpected EOF
    --> test_0:1:6
     |
   1 | return
     |      ^
Error [EPAR0370003]: unexpected EOF
    --> test_1:1:8
     |
   1 | return 5
     |        ^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', ';', 'true', 'false', 'final', 'block', 'network', 'self' -- found 'if'
    --> test_2:2:1
     |
   2 | if x {}
     | ^^
